# boleks

./: CMakeLists.txt  CUDA_PERF_ANALYSIS_PL.md  adl.cpp  adl.h  baseclient.cpp  baseclient.h  cudautil.cpp  cudautil.h  hwmon-adl.cpp  hwmon-adl.h  hwmon-amdgpu.cpp  hwmon-amdgpu.h  hwmon.h  kaspamoj.tgz  prime.cpp  protocol.proto
config4cpp/include/config4cpp/: Configuration.h  SchemaValidator.h
config4cpp/src/: ConfigLex.cpp  ConfigLex.h  ConfigParser.cpp  ConfigParser.h  ConfigurationImpl.cpp  ConfigurationImpl.h  LexBase.cpp  LexBase.h  SchemaValidator.cpp  UidIdentifierDummyProcessor.h  UidIdentifierProcessor.cpp
docs/: fermat_cuda_optimization_audit.md  telemetry_analysis.md
xpm/cuda/: OPTIMIZATION_REVIEW_PL.md  benchmarks.cpp  config.txt  cpd_calculator.py  fermat.cu  sha256.cu  sieve.cu  tuning_results_summary.csv  tuning_results_summary.md  xpmclient.cpp  xpmclient.h
xpm/opencl/: benchmarks.cpp  config.txt  generic_common.h  generic_sieve.cl  xpmclient.cpp  xpmclient.h
xpm/rpc/blkmaker/: blkmaker_jansson.c
xpm/rpc/common/: getblocktemplate.cpp  primecoin.cpp  system.cpp
xpm/rpc/include/: CSieveOfEratosthenesL1Ext.h  primecoin.h  system.h
